[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/mainmenu.png" type="Texture" id=1]
[ext_resource path="res://Resources/SpaceBackground.png" type="Texture" id=2]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Buttons/Scenes/MenuButtons.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Themes/ButtonTheme.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Fuentes/GeneralFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/left-arrow.png" type="Texture" id=7]
[ext_resource path="res://Resources/Fuentes/Kenney Pixel.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Resources/SecondBackground.png" type="Texture" id=9]
[ext_resource path="res://Resources/Title.png" type="Texture" id=10]

[sub_resource type="InputEventKey" id=1]
pressed = true
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 8 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 152.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 9 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 64.0
margin_top = 472.0
margin_right = 284.0
margin_bottom = 672.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 220.0
margin_bottom = 200.0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_constants/separation = 10

[node name="play" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 220.0
margin_bottom = 60.0
hint_tooltip = "Necesitas iniciar sesi칩n para poder jugar."
text = "Jugar"

[node name="editor" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 70.0
margin_right = 220.0
margin_bottom = 130.0
text = "Editor"

[node name="salir" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 140.0
margin_right = 220.0
margin_bottom = 200.0
text = "Salir"

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -720.0
margin_right = 540.0
size_flags_horizontal = 13
size_flags_vertical = 13
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.893
anchor_right = 0.5
anchor_bottom = 0.906
margin_left = -164.5
margin_top = -158.0
margin_right = 164.5
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Button" parent="Popup/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1.99997
margin_top = 0.75
margin_right = 31.0
margin_bottom = 32.75
rect_rotation = 90.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Popup/Panel"]
anchor_left = 0.5
anchor_top = 0.964
anchor_right = 0.5
anchor_bottom = 0.964
margin_left = -117.0
margin_top = -40.0
margin_right = 117.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register" type="Button" parent="Popup/Panel/HBoxContainer2"]
margin_right = 151.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
shortcut = SubResource( 2 )
text = "Crear usuario"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Button" parent="Popup/Panel/HBoxContainer2"]
margin_left = 155.0
margin_right = 234.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
disabled = true
shortcut = SubResource( 2 )
text = "Entrar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/Panel"]
anchor_left = 0.5
anchor_top = 0.454
anchor_right = 0.5
anchor_bottom = 0.454
margin_left = -135.5
margin_top = -34.0
margin_right = 135.5
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel/HBoxContainer"]
margin_right = 117.0
margin_bottom = 68.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="Popup/Panel/HBoxContainer/VBoxContainer"]
margin_right = 117.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 6 )
text = "Usuario"

[node name="Label2" type="Label" parent="Popup/Panel/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 117.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 6 )
text = "Contrase침a"

[node name="VBoxContainer2" type="VBoxContainer" parent="Popup/Panel/HBoxContainer"]
margin_left = 121.0
margin_right = 271.0
margin_bottom = 68.0

[node name="usename" type="LineEdit" parent="Popup/Panel/HBoxContainer/VBoxContainer2"]
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
max_length = 10
clear_button_enabled = true

[node name="password" type="LineEdit" parent="Popup/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
max_length = 10
secret = true
clear_button_enabled = true

[node name="Wrongpassword" type="Label" parent="Popup/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.16
anchor_right = 0.5
anchor_bottom = 0.16
margin_left = -88.0
margin_right = 88.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "La contrase침a no es correcta"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoUser" type="Label" parent="Popup/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.169
anchor_right = 0.5
anchor_bottom = 0.169
margin_left = -88.0
margin_right = 88.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Ese usuario no existe"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HttpError" type="Label" parent="Popup/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.169
anchor_right = 0.5
anchor_bottom = 0.169
margin_left = -88.0
margin_right = 88.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Algo sali칩 mal, prueba otra vez"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterPopup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.911
anchor_right = 0.5
anchor_bottom = 0.911
margin_left = -200.0
margin_top = -244.0
margin_right = 200.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="RegisterPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -246.0
margin_right = 200.0
custom_styles/panel = ExtResource( 5 )

[node name="close2" type="Button" parent="RegisterPopup/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -0.291046
margin_top = 0.176758
margin_right = 35.709
margin_bottom = 31.1768
rect_rotation = 90.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateUser" type="Button" parent="RegisterPopup/Panel"]
anchor_left = 0.5
anchor_top = 0.956
anchor_right = 0.5
anchor_bottom = 0.956
margin_left = -75.5
margin_top = -40.0
margin_right = 75.5
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
disabled = true
text = "Crear usuario"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RegisterPopup/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.5
margin_top = -52.0
margin_right = 171.5
margin_bottom = 52.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RegisterPopup/Panel/HBoxContainer"]
margin_right = 163.0
margin_bottom = 104.0
custom_constants/separation = 18

[node name="Label" type="Label" parent="RegisterPopup/Panel/HBoxContainer/VBoxContainer"]
margin_right = 163.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 6 )
text = "Usuario"

[node name="Label2" type="Label" parent="RegisterPopup/Panel/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 163.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 6 )
text = "Contrase침a"

[node name="Label3" type="Label" parent="RegisterPopup/Panel/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 163.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 6 )
text = "Rep. Contrase침a"

[node name="VBoxContainer2" type="VBoxContainer" parent="RegisterPopup/Panel/HBoxContainer"]
margin_left = 193.0
margin_right = 343.0
margin_bottom = 104.0

[node name="usename" type="LineEdit" parent="RegisterPopup/Panel/HBoxContainer/VBoxContainer2"]
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
max_length = 10
clear_button_enabled = true

[node name="password" type="LineEdit" parent="RegisterPopup/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
max_length = 10
secret = true
clear_button_enabled = true

[node name="password2" type="LineEdit" parent="RegisterPopup/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 150.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
max_length = 10
secret = true
clear_button_enabled = true

[node name="Wrongpassword" type="Label" parent="RegisterPopup/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.16
anchor_right = 0.5
anchor_bottom = 0.16
margin_left = -88.0
margin_right = 88.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Las contrase침as no coinciden"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameTaken" type="Label" parent="RegisterPopup/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.16
anchor_right = 0.5
anchor_bottom = 0.16
margin_left = -110.0
margin_right = 110.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Ese nombre de usuario ya est치 en uso"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoutButton" type="Button" parent="."]
visible = false
anchor_left = 0.96
anchor_top = 0.035
anchor_right = 0.96
anchor_bottom = 0.04
margin_left = -145.0
margin_top = 15.0
margin_right = 6.0
margin_bottom = 43.4
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Cerrar sesi칩n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="."]
anchor_left = 0.96
anchor_top = 0.035
anchor_right = 0.96
anchor_bottom = 0.04
margin_left = -145.0
margin_top = 15.0
margin_bottom = 43.4
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Iniciar sesi칩n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.911
anchor_top = 0.067
anchor_right = 0.911
anchor_bottom = 0.067
margin_left = -255.88
margin_top = -8.24
margin_right = -95.88
margin_bottom = 21.76
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Loading" type="Popup" parent="."]
margin_right = 187.0
margin_bottom = 50.0

[node name="Panel" type="Panel" parent="Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="Loading/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.5
margin_top = -12.0
margin_right = 55.5
margin_bottom = 12.0
custom_fonts/font = SubResource( 4 )
text = "Cargando..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = 80.0
margin_right = 454.0
margin_bottom = 181.0
texture = ExtResource( 10 )
expand = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Popup/Panel/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Popup/Panel/HBoxContainer2/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="Popup/Panel/HBoxContainer2/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="RegisterPopup/Panel/close2" to="." method="_on_close2_pressed"]
[connection signal="pressed" from="RegisterPopup/Panel/CreateUser" to="." method="_on_CreateUser_pressed"]
[connection signal="pressed" from="LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
